reference/5.1/Microsoft.PowerShell.Core/About/about_Type_Accelerators.md
---
description: 介绍适用于 .NET framework 类的类型加速器
keywords: powershell,cmdlet
Locale: en-US
ms.date: 05/01/2020
online version: https://docs.microsoft.com/powershell/module/microsoft.powershell.core/about/about_type_accelerators?view=powershell-5.1&WT.mc_id=ps-gethelp
schema: 2.0.0
title: about_Type_Accelerators
ms.openlocfilehash: 21093f3a649212526c3fc3eb5405e2a7ce6e49f3
ms.sourcegitcommit: f874dc1d4236e06a3df195d179f59e0a7d9f8436
ms.translationtype: MT
ms.contentlocale: zh-CN
ms.lasthandoff: 10/13/2020
ms.locfileid: "93200046"
---
# <a name="about-type-accelerators"></a><span data-ttu-id="ee1fd-104">关于类型加速器</span><span class="sxs-lookup"><span data-stu-id="ee1fd-104">About Type Accelerators</span></span>

## <a name="short-desription"></a><span data-ttu-id="ee1fd-105">简短描述</span><span class="sxs-lookup"><span data-stu-id="ee1fd-105">SHORT DESRIPTION</span></span>
<span data-ttu-id="ee1fd-106">介绍适用于 .NET framework 类的类型加速器</span><span class="sxs-lookup"><span data-stu-id="ee1fd-106">Describes the Type accelerators available for .NET framework classes</span></span>

## <a name="long-description"></a><span data-ttu-id="ee1fd-107">详细说明</span><span class="sxs-lookup"><span data-stu-id="ee1fd-107">LONG DESCRIPTION</span></span>

<span data-ttu-id="ee1fd-108">类型加速器是 .NET framework 类的别名。</span><span class="sxs-lookup"><span data-stu-id="ee1fd-108">Type accelerators are aliases for .NET framework classes.</span></span> <span data-ttu-id="ee1fd-109">它们允许您访问特定的 .NET framework 类，而无需显式键入整个类名。</span><span class="sxs-lookup"><span data-stu-id="ee1fd-109">They allow you to access specific .NET framework classes without having to explicitly type the entire class name.</span></span> <span data-ttu-id="ee1fd-110">例如，可以将 **AliasAttribute** 类从中缩短 `[System.Management.Automation.AliasAttribute]` 到 `[Alias]` 。</span><span class="sxs-lookup"><span data-stu-id="ee1fd-110">For example, you can shorten the **AliasAttribute** class from `[System.Management.Automation.AliasAttribute]` to `[Alias]`.</span></span>

> [!NOTE]
> <span data-ttu-id="ee1fd-111">所有类型加速器仍需用方括号括起来 (`[]`) 。</span><span class="sxs-lookup"><span data-stu-id="ee1fd-111">All type accelerators still need to be wrapped in square brackets(`[]`).</span></span>

## <a name="available-type-accelerators"></a><span data-ttu-id="ee1fd-112">可用类型加速器</span><span class="sxs-lookup"><span data-stu-id="ee1fd-112">Available Type Accelerators</span></span>

|        <span data-ttu-id="ee1fd-113">加速器</span><span class="sxs-lookup"><span data-stu-id="ee1fd-113">Accelerator</span></span>          |                           <span data-ttu-id="ee1fd-114">完整类名</span><span class="sxs-lookup"><span data-stu-id="ee1fd-114">Full Class Name</span></span>                           |
|---------------------------- | ------------------------------------------------------------------- |
|<span data-ttu-id="ee1fd-115">adsi</span><span class="sxs-lookup"><span data-stu-id="ee1fd-115">adsi</span></span>                         | <span data-ttu-id="ee1fd-116">Microsoft.directoryservices</span><span class="sxs-lookup"><span data-stu-id="ee1fd-116">System.DirectoryServices.DirectoryEntry</span></span>                             |
|<span data-ttu-id="ee1fd-117">adsisearcher</span><span class="sxs-lookup"><span data-stu-id="ee1fd-117">adsisearcher</span></span>                 | <span data-ttu-id="ee1fd-118">Microsoft.directoryservices. DirectorySearcher</span><span class="sxs-lookup"><span data-stu-id="ee1fd-118">System.DirectoryServices.DirectorySearcher</span></span>                          |
|<span data-ttu-id="ee1fd-119">Alias</span><span class="sxs-lookup"><span data-stu-id="ee1fd-119">Alias</span></span>                        | <span data-ttu-id="ee1fd-120">System.web. AliasAttribute</span><span class="sxs-lookup"><span data-stu-id="ee1fd-120">System.Management.Automation.AliasAttribute</span></span>                         |
|<span data-ttu-id="ee1fd-121">AllowEmptyCollection</span><span class="sxs-lookup"><span data-stu-id="ee1fd-121">AllowEmptyCollection</span></span>         | <span data-ttu-id="ee1fd-122">System.web. AllowEmptyCollectionAttribute</span><span class="sxs-lookup"><span data-stu-id="ee1fd-122">System.Management.Automation.AllowEmptyCollectionAttribute</span></span>          |
|<span data-ttu-id="ee1fd-123">AllowEmptyString</span><span class="sxs-lookup"><span data-stu-id="ee1fd-123">AllowEmptyString</span></span>             | <span data-ttu-id="ee1fd-124">System.web. AllowEmptyStringAttribute</span><span class="sxs-lookup"><span data-stu-id="ee1fd-124">System.Management.Automation.AllowEmptyStringAttribute</span></span>              |
|<span data-ttu-id="ee1fd-125">AllowNull</span><span class="sxs-lookup"><span data-stu-id="ee1fd-125">AllowNull</span></span>                    | <span data-ttu-id="ee1fd-126">System.web. AllowNullAttribute</span><span class="sxs-lookup"><span data-stu-id="ee1fd-126">System.Management.Automation.AllowNullAttribute</span></span>                     |
|<span data-ttu-id="ee1fd-127">ArgumentCompleter</span><span class="sxs-lookup"><span data-stu-id="ee1fd-127">ArgumentCompleter</span></span>            | <span data-ttu-id="ee1fd-128">System.web. ArgumentCompleterAttribute</span><span class="sxs-lookup"><span data-stu-id="ee1fd-128">System.Management.Automation.ArgumentCompleterAttribute</span></span>             |
|<span data-ttu-id="ee1fd-129">array</span><span class="sxs-lookup"><span data-stu-id="ee1fd-129">array</span></span>                        | <span data-ttu-id="ee1fd-130">System.Array</span><span class="sxs-lookup"><span data-stu-id="ee1fd-130">System.Array</span></span>                                                        |
|<span data-ttu-id="ee1fd-131">bigint</span><span class="sxs-lookup"><span data-stu-id="ee1fd-131">bigint</span></span>                       | <span data-ttu-id="ee1fd-132">BigInteger</span><span class="sxs-lookup"><span data-stu-id="ee1fd-132">System.Numerics.BigInteger</span></span>                                          |
|<span data-ttu-id="ee1fd-133">bool</span><span class="sxs-lookup"><span data-stu-id="ee1fd-133">bool</span></span>                         | <span data-ttu-id="ee1fd-134">System.Boolean</span><span class="sxs-lookup"><span data-stu-id="ee1fd-134">System.Boolean</span></span>                                                      |
|<span data-ttu-id="ee1fd-135">字节</span><span class="sxs-lookup"><span data-stu-id="ee1fd-135">byte</span></span>                         | <span data-ttu-id="ee1fd-136">System.Byte</span><span class="sxs-lookup"><span data-stu-id="ee1fd-136">System.Byte</span></span>                                                         |
|<span data-ttu-id="ee1fd-137">char</span><span class="sxs-lookup"><span data-stu-id="ee1fd-137">char</span></span>                         | <span data-ttu-id="ee1fd-138">System.Char</span><span class="sxs-lookup"><span data-stu-id="ee1fd-138">System.Char</span></span>                                                         |
|<span data-ttu-id="ee1fd-139">cimclass</span><span class="sxs-lookup"><span data-stu-id="ee1fd-139">cimclass</span></span>                     | <span data-ttu-id="ee1fd-140">CimClass。</span><span class="sxs-lookup"><span data-stu-id="ee1fd-140">Microsoft.Management.Infrastructure.CimClass</span></span>                        |
|<span data-ttu-id="ee1fd-141">cimconverter</span><span class="sxs-lookup"><span data-stu-id="ee1fd-141">cimconverter</span></span>                 | <span data-ttu-id="ee1fd-142">CimConverter。</span><span class="sxs-lookup"><span data-stu-id="ee1fd-142">Microsoft.Management.Infrastructure.CimConverter</span></span>                    |
|<span data-ttu-id="ee1fd-143">ciminstance</span><span class="sxs-lookup"><span data-stu-id="ee1fd-143">ciminstance</span></span>                  | <span data-ttu-id="ee1fd-144">Microsoft.Management.Infrastructure.CimInstance</span><span class="sxs-lookup"><span data-stu-id="ee1fd-144">Microsoft.Management.Infrastructure.CimInstance</span></span>                     |
|<span data-ttu-id="ee1fd-145">CimSession</span><span class="sxs-lookup"><span data-stu-id="ee1fd-145">CimSession</span></span>                   | <span data-ttu-id="ee1fd-146">Microsoft.Management.Infrastructure.CimSession</span><span class="sxs-lookup"><span data-stu-id="ee1fd-146">Microsoft.Management.Infrastructure.CimSession</span></span>                      |
|<span data-ttu-id="ee1fd-147">cimtype</span><span class="sxs-lookup"><span data-stu-id="ee1fd-147">cimtype</span></span>                      | <span data-ttu-id="ee1fd-148">CimType。</span><span class="sxs-lookup"><span data-stu-id="ee1fd-148">Microsoft.Management.Infrastructure.CimType</span></span>                         |
|<span data-ttu-id="ee1fd-149">CmdletBinding</span><span class="sxs-lookup"><span data-stu-id="ee1fd-149">CmdletBinding</span></span>                | <span data-ttu-id="ee1fd-150">System.web. CmdletBindingAttribute</span><span class="sxs-lookup"><span data-stu-id="ee1fd-150">System.Management.Automation.CmdletBindingAttribute</span></span>                 |
|<span data-ttu-id="ee1fd-151">cultureinfo</span><span class="sxs-lookup"><span data-stu-id="ee1fd-151">cultureinfo</span></span>                  | <span data-ttu-id="ee1fd-152">System.Globalization.CultureInfo</span><span class="sxs-lookup"><span data-stu-id="ee1fd-152">System.Globalization.CultureInfo</span></span>                                    |
|<span data-ttu-id="ee1fd-153">datetime</span><span class="sxs-lookup"><span data-stu-id="ee1fd-153">datetime</span></span>                     | <span data-ttu-id="ee1fd-154">System.DateTime</span><span class="sxs-lookup"><span data-stu-id="ee1fd-154">System.DateTime</span></span>                                                     |
|<span data-ttu-id="ee1fd-155">Decimal</span><span class="sxs-lookup"><span data-stu-id="ee1fd-155">decimal</span></span>                      | <span data-ttu-id="ee1fd-156">System.Decimal</span><span class="sxs-lookup"><span data-stu-id="ee1fd-156">System.Decimal</span></span>                                                      |
|<span data-ttu-id="ee1fd-157">Double</span><span class="sxs-lookup"><span data-stu-id="ee1fd-157">double</span></span>                       | <span data-ttu-id="ee1fd-158">System.Double</span><span class="sxs-lookup"><span data-stu-id="ee1fd-158">System.Double</span></span>                                                       |
|<span data-ttu-id="ee1fd-159">Set-dsclocalconfigurationmanager</span><span class="sxs-lookup"><span data-stu-id="ee1fd-159">DscLocalConfigurationManager</span></span> | <span data-ttu-id="ee1fd-160">System.web. DscLocalConfigurationManagerAttribute</span><span class="sxs-lookup"><span data-stu-id="ee1fd-160">System.Management.Automation.DscLocalConfigurationManagerAttribute</span></span>  |
|<span data-ttu-id="ee1fd-161">DscProperty</span><span class="sxs-lookup"><span data-stu-id="ee1fd-161">DscProperty</span></span>                  | <span data-ttu-id="ee1fd-162">System.web. DscPropertyAttribute</span><span class="sxs-lookup"><span data-stu-id="ee1fd-162">System.Management.Automation.DscPropertyAttribute</span></span>                   |
|<span data-ttu-id="ee1fd-163">DscResource</span><span class="sxs-lookup"><span data-stu-id="ee1fd-163">DscResource</span></span>                  | <span data-ttu-id="ee1fd-164">System.web. DscResourceAttribute</span><span class="sxs-lookup"><span data-stu-id="ee1fd-164">System.Management.Automation.DscResourceAttribute</span></span>                   |
|<span data-ttu-id="ee1fd-165">float</span><span class="sxs-lookup"><span data-stu-id="ee1fd-165">float</span></span>                        | <span data-ttu-id="ee1fd-166">System.Single</span><span class="sxs-lookup"><span data-stu-id="ee1fd-166">System.Single</span></span>                                                       |
|<span data-ttu-id="ee1fd-167">GUID</span><span class="sxs-lookup"><span data-stu-id="ee1fd-167">guid</span></span>                         | <span data-ttu-id="ee1fd-168">System.Guid</span><span class="sxs-lookup"><span data-stu-id="ee1fd-168">System.Guid</span></span>                                                         |
|<span data-ttu-id="ee1fd-169">散</span><span class="sxs-lookup"><span data-stu-id="ee1fd-169">hashtable</span></span>                    | <span data-ttu-id="ee1fd-170">System.Collections.Hashtable</span><span class="sxs-lookup"><span data-stu-id="ee1fd-170">System.Collections.Hashtable</span></span>                                        |
|<span data-ttu-id="ee1fd-171">initialsessionstate</span><span class="sxs-lookup"><span data-stu-id="ee1fd-171">initialsessionstate</span></span>          | <span data-ttu-id="ee1fd-172">System.Management.Automation.Runspaces.InitialSessionState</span><span class="sxs-lookup"><span data-stu-id="ee1fd-172">System.Management.Automation.Runspaces.InitialSessionState</span></span>          |
|<span data-ttu-id="ee1fd-173">int</span><span class="sxs-lookup"><span data-stu-id="ee1fd-173">int</span></span>                          | <span data-ttu-id="ee1fd-174">System.Int32</span><span class="sxs-lookup"><span data-stu-id="ee1fd-174">System.Int32</span></span>                                                        |
|<span data-ttu-id="ee1fd-175">int16</span><span class="sxs-lookup"><span data-stu-id="ee1fd-175">int16</span></span>                        | <span data-ttu-id="ee1fd-176">System.Int16</span><span class="sxs-lookup"><span data-stu-id="ee1fd-176">System.Int16</span></span>                                                        |
|<span data-ttu-id="ee1fd-177">int32</span><span class="sxs-lookup"><span data-stu-id="ee1fd-177">int32</span></span>                        | <span data-ttu-id="ee1fd-178">System.Int32</span><span class="sxs-lookup"><span data-stu-id="ee1fd-178">System.Int32</span></span>                                                        |
|<span data-ttu-id="ee1fd-179">int64</span><span class="sxs-lookup"><span data-stu-id="ee1fd-179">int64</span></span>                        | <span data-ttu-id="ee1fd-180">System.Int64</span><span class="sxs-lookup"><span data-stu-id="ee1fd-180">System.Int64</span></span>                                                        |
|<span data-ttu-id="ee1fd-181">地址</span><span class="sxs-lookup"><span data-stu-id="ee1fd-181">ipaddress</span></span>                    | <span data-ttu-id="ee1fd-182">系统 .Net. IPAddress</span><span class="sxs-lookup"><span data-stu-id="ee1fd-182">System.Net.IPAddress</span></span>                                                |
|<span data-ttu-id="ee1fd-183">IPEndpoint</span><span class="sxs-lookup"><span data-stu-id="ee1fd-183">IPEndpoint</span></span>                   | <span data-ttu-id="ee1fd-184">系统 .Net. IPEndPoint</span><span class="sxs-lookup"><span data-stu-id="ee1fd-184">System.Net.IPEndPoint</span></span>                                               |
|<span data-ttu-id="ee1fd-185">long</span><span class="sxs-lookup"><span data-stu-id="ee1fd-185">long</span></span>                         | <span data-ttu-id="ee1fd-186">System.Int64</span><span class="sxs-lookup"><span data-stu-id="ee1fd-186">System.Int64</span></span>                                                        |
|<span data-ttu-id="ee1fd-187">mailaddress</span><span class="sxs-lookup"><span data-stu-id="ee1fd-187">mailaddress</span></span>                  | <span data-ttu-id="ee1fd-188">系统 MailAddress</span><span class="sxs-lookup"><span data-stu-id="ee1fd-188">System.Net.Mail.MailAddress</span></span>                                         |
|<span data-ttu-id="ee1fd-189">NullString</span><span class="sxs-lookup"><span data-stu-id="ee1fd-189">NullString</span></span>                   | <span data-ttu-id="ee1fd-190">"NullString"。</span><span class="sxs-lookup"><span data-stu-id="ee1fd-190">System.Management.Automation.Language.NullString</span></span>                    |
|<span data-ttu-id="ee1fd-191">ObjectSecurity</span><span class="sxs-lookup"><span data-stu-id="ee1fd-191">ObjectSecurity</span></span>               | <span data-ttu-id="ee1fd-192">Accesscontrol-namespace. ObjectSecurity</span><span class="sxs-lookup"><span data-stu-id="ee1fd-192">System.Security.AccessControl.ObjectSecurity</span></span>                        |
|<span data-ttu-id="ee1fd-193">OutputType</span><span class="sxs-lookup"><span data-stu-id="ee1fd-193">OutputType</span></span>                   | <span data-ttu-id="ee1fd-194">System.web. OutputTypeAttribute</span><span class="sxs-lookup"><span data-stu-id="ee1fd-194">System.Management.Automation.OutputTypeAttribute</span></span>                    |
|<span data-ttu-id="ee1fd-195">参数</span><span class="sxs-lookup"><span data-stu-id="ee1fd-195">Parameter</span></span>                    | <span data-ttu-id="ee1fd-196">System.web. ParameterAttribute</span><span class="sxs-lookup"><span data-stu-id="ee1fd-196">System.Management.Automation.ParameterAttribute</span></span>                     |
|<span data-ttu-id="ee1fd-197">PhysicalAddress</span><span class="sxs-lookup"><span data-stu-id="ee1fd-197">PhysicalAddress</span></span>              | <span data-ttu-id="ee1fd-198">System.net.networkinformation. PhysicalAddress</span><span class="sxs-lookup"><span data-stu-id="ee1fd-198">System.Net.NetworkInformation.PhysicalAddress</span></span>                       |
|<span data-ttu-id="ee1fd-199">powershell</span><span class="sxs-lookup"><span data-stu-id="ee1fd-199">powershell</span></span>                   | <span data-ttu-id="ee1fd-200">System.web。</span><span class="sxs-lookup"><span data-stu-id="ee1fd-200">System.Management.Automation.PowerShell</span></span>                             |
|<span data-ttu-id="ee1fd-201">psaliasproperty</span><span class="sxs-lookup"><span data-stu-id="ee1fd-201">psaliasproperty</span></span>              | <span data-ttu-id="ee1fd-202">System.web. PSAliasProperty</span><span class="sxs-lookup"><span data-stu-id="ee1fd-202">System.Management.Automation.PSAliasProperty</span></span>                        |
|<span data-ttu-id="ee1fd-203">pscredential</span><span class="sxs-lookup"><span data-stu-id="ee1fd-203">pscredential</span></span>                 | <span data-ttu-id="ee1fd-204">System.Management.Automation.PSCredential</span><span class="sxs-lookup"><span data-stu-id="ee1fd-204">System.Management.Automation.PSCredential</span></span>                           |
|<span data-ttu-id="ee1fd-205">pscustomobject</span><span class="sxs-lookup"><span data-stu-id="ee1fd-205">pscustomobject</span></span>               | <span data-ttu-id="ee1fd-206">System.Management.Automation.PSObject</span><span class="sxs-lookup"><span data-stu-id="ee1fd-206">System.Management.Automation.PSObject</span></span>                               |
|<span data-ttu-id="ee1fd-207">PSDefaultValue</span><span class="sxs-lookup"><span data-stu-id="ee1fd-207">PSDefaultValue</span></span>               | <span data-ttu-id="ee1fd-208">System.Management.Automation.PSDefaultValueAttribute</span><span class="sxs-lookup"><span data-stu-id="ee1fd-208">System.Management.Automation.PSDefaultValueAttribute</span></span>                |
|<span data-ttu-id="ee1fd-209">pslistmodifier</span><span class="sxs-lookup"><span data-stu-id="ee1fd-209">pslistmodifier</span></span>               | <span data-ttu-id="ee1fd-210">System.web. PSListModifier</span><span class="sxs-lookup"><span data-stu-id="ee1fd-210">System.Management.Automation.PSListModifier</span></span>                         |
|<span data-ttu-id="ee1fd-211">psmoduleinfo</span><span class="sxs-lookup"><span data-stu-id="ee1fd-211">psmoduleinfo</span></span>                 | <span data-ttu-id="ee1fd-212">System.Management.Automation.PSModuleInfo</span><span class="sxs-lookup"><span data-stu-id="ee1fd-212">System.Management.Automation.PSModuleInfo</span></span>                           |
|<span data-ttu-id="ee1fd-213">psnoteproperty</span><span class="sxs-lookup"><span data-stu-id="ee1fd-213">psnoteproperty</span></span>               | <span data-ttu-id="ee1fd-214">System.web. PSNoteProperty</span><span class="sxs-lookup"><span data-stu-id="ee1fd-214">System.Management.Automation.PSNoteProperty</span></span>                         |
|<span data-ttu-id="ee1fd-215">psobject</span><span class="sxs-lookup"><span data-stu-id="ee1fd-215">psobject</span></span>                     | <span data-ttu-id="ee1fd-216">System.Management.Automation.PSObject</span><span class="sxs-lookup"><span data-stu-id="ee1fd-216">System.Management.Automation.PSObject</span></span>                               |
|<span data-ttu-id="ee1fd-217">psprimitivedictionary</span><span class="sxs-lookup"><span data-stu-id="ee1fd-217">psprimitivedictionary</span></span>        | <span data-ttu-id="ee1fd-218">System.web. PSPrimitiveDictionary</span><span class="sxs-lookup"><span data-stu-id="ee1fd-218">System.Management.Automation.PSPrimitiveDictionary</span></span>                  |
|<span data-ttu-id="ee1fd-219">psscriptmethod</span><span class="sxs-lookup"><span data-stu-id="ee1fd-219">psscriptmethod</span></span>               | <span data-ttu-id="ee1fd-220">System.web. PSScriptMethod</span><span class="sxs-lookup"><span data-stu-id="ee1fd-220">System.Management.Automation.PSScriptMethod</span></span>                         |
|<span data-ttu-id="ee1fd-221">psscriptproperty</span><span class="sxs-lookup"><span data-stu-id="ee1fd-221">psscriptproperty</span></span>             | <span data-ttu-id="ee1fd-222">System.web. PSScriptProperty</span><span class="sxs-lookup"><span data-stu-id="ee1fd-222">System.Management.Automation.PSScriptProperty</span></span>                       |
|<span data-ttu-id="ee1fd-223">PSTypeNameAttribute</span><span class="sxs-lookup"><span data-stu-id="ee1fd-223">PSTypeNameAttribute</span></span>          | <span data-ttu-id="ee1fd-224">System.web. PSTypeNameAttribute</span><span class="sxs-lookup"><span data-stu-id="ee1fd-224">System.Management.Automation.PSTypeNameAttribute</span></span>                    |
|<span data-ttu-id="ee1fd-225">system.management.automation.psvariable</span><span class="sxs-lookup"><span data-stu-id="ee1fd-225">psvariable</span></span>                   | <span data-ttu-id="ee1fd-226">System.Management.Automation.PSVariable</span><span class="sxs-lookup"><span data-stu-id="ee1fd-226">System.Management.Automation.PSVariable</span></span>                             |
|<span data-ttu-id="ee1fd-227">psvariableproperty</span><span class="sxs-lookup"><span data-stu-id="ee1fd-227">psvariableproperty</span></span>           | <span data-ttu-id="ee1fd-228">System.web. PSVariableProperty</span><span class="sxs-lookup"><span data-stu-id="ee1fd-228">System.Management.Automation.PSVariableProperty</span></span>                     |
|<span data-ttu-id="ee1fd-229">ref</span><span class="sxs-lookup"><span data-stu-id="ee1fd-229">ref</span></span>                          | <span data-ttu-id="ee1fd-230">System.web. PSReference</span><span class="sxs-lookup"><span data-stu-id="ee1fd-230">System.Management.Automation.PSReference</span></span>                            |
|<span data-ttu-id="ee1fd-231">regex</span><span class="sxs-lookup"><span data-stu-id="ee1fd-231">regex</span></span>                        | <span data-ttu-id="ee1fd-232">System.Text.RegularExpressions.Regex</span><span class="sxs-lookup"><span data-stu-id="ee1fd-232">System.Text.RegularExpressions.Regex</span></span>                                |
|<span data-ttu-id="ee1fd-233">运行空间</span><span class="sxs-lookup"><span data-stu-id="ee1fd-233">runspace</span></span>                     | <span data-ttu-id="ee1fd-234">System.web. Management。</span><span class="sxs-lookup"><span data-stu-id="ee1fd-234">System.Management.Automation.Runspaces.Runspace</span></span>                     |
|<span data-ttu-id="ee1fd-235">runspacefactory</span><span class="sxs-lookup"><span data-stu-id="ee1fd-235">runspacefactory</span></span>              | <span data-ttu-id="ee1fd-236">"RunspaceFactory"。</span><span class="sxs-lookup"><span data-stu-id="ee1fd-236">System.Management.Automation.Runspaces.RunspaceFactory</span></span>              |
|<span data-ttu-id="ee1fd-237">sbyte</span><span class="sxs-lookup"><span data-stu-id="ee1fd-237">sbyte</span></span>                        | <span data-ttu-id="ee1fd-238">System.SByte</span><span class="sxs-lookup"><span data-stu-id="ee1fd-238">System.SByte</span></span>                                                        |
|<span data-ttu-id="ee1fd-239">scriptblock</span><span class="sxs-lookup"><span data-stu-id="ee1fd-239">scriptblock</span></span>                  | <span data-ttu-id="ee1fd-240">System.object。</span><span class="sxs-lookup"><span data-stu-id="ee1fd-240">System.Management.Automation.ScriptBlock</span></span>                            |
|<span data-ttu-id="ee1fd-241">securestring</span><span class="sxs-lookup"><span data-stu-id="ee1fd-241">securestring</span></span>                 | <span data-ttu-id="ee1fd-242">System.Security.SecureString</span><span class="sxs-lookup"><span data-stu-id="ee1fd-242">System.Security.SecureString</span></span>                                        |
|<span data-ttu-id="ee1fd-243"> single</span><span class="sxs-lookup"><span data-stu-id="ee1fd-243">single</span></span>                       | <span data-ttu-id="ee1fd-244">System.Single</span><span class="sxs-lookup"><span data-stu-id="ee1fd-244">System.Single</span></span>                                                       |
|<span data-ttu-id="ee1fd-245">string</span><span class="sxs-lookup"><span data-stu-id="ee1fd-245">string</span></span>                       | <span data-ttu-id="ee1fd-246">System.String</span><span class="sxs-lookup"><span data-stu-id="ee1fd-246">System.String</span></span>                                                       |
|<span data-ttu-id="ee1fd-247">SupportsWildcards</span><span class="sxs-lookup"><span data-stu-id="ee1fd-247">SupportsWildcards</span></span>            | <span data-ttu-id="ee1fd-248">System.web. SupportsWildcardsAttribute</span><span class="sxs-lookup"><span data-stu-id="ee1fd-248">System.Management.Automation.SupportsWildcardsAttribute</span></span>             |
|<span data-ttu-id="ee1fd-249">开关</span><span class="sxs-lookup"><span data-stu-id="ee1fd-249">switch</span></span>                       | <span data-ttu-id="ee1fd-250">System.Management.Automation.SwitchParameter</span><span class="sxs-lookup"><span data-stu-id="ee1fd-250">System.Management.Automation.SwitchParameter</span></span>                        |
|<span data-ttu-id="ee1fd-251">timespan</span><span class="sxs-lookup"><span data-stu-id="ee1fd-251">timespan</span></span>                     | <span data-ttu-id="ee1fd-252">System.TimeSpan</span><span class="sxs-lookup"><span data-stu-id="ee1fd-252">System.TimeSpan</span></span>                                                     |
|<span data-ttu-id="ee1fd-253">类型</span><span class="sxs-lookup"><span data-stu-id="ee1fd-253">type</span></span>                         | <span data-ttu-id="ee1fd-254">System.Type</span><span class="sxs-lookup"><span data-stu-id="ee1fd-254">System.Type</span></span>                                                         |
|<span data-ttu-id="ee1fd-255">uint16</span><span class="sxs-lookup"><span data-stu-id="ee1fd-255">uint16</span></span>                       | <span data-ttu-id="ee1fd-256">System.UInt16</span><span class="sxs-lookup"><span data-stu-id="ee1fd-256">System.UInt16</span></span>                                                       |
|<span data-ttu-id="ee1fd-257">uint32</span><span class="sxs-lookup"><span data-stu-id="ee1fd-257">uint32</span></span>                       | <span data-ttu-id="ee1fd-258">System.UInt32</span><span class="sxs-lookup"><span data-stu-id="ee1fd-258">System.UInt32</span></span>                                                       |
|<span data-ttu-id="ee1fd-259">uint64</span><span class="sxs-lookup"><span data-stu-id="ee1fd-259">uint64</span></span>                       | <span data-ttu-id="ee1fd-260">System.UInt64</span><span class="sxs-lookup"><span data-stu-id="ee1fd-260">System.UInt64</span></span>                                                       |
|<span data-ttu-id="ee1fd-261">uri</span><span class="sxs-lookup"><span data-stu-id="ee1fd-261">uri</span></span>                          | <span data-ttu-id="ee1fd-262">System.Uri</span><span class="sxs-lookup"><span data-stu-id="ee1fd-262">System.Uri</span></span>                                                          |
|<span data-ttu-id="ee1fd-263">ValidateCount</span><span class="sxs-lookup"><span data-stu-id="ee1fd-263">ValidateCount</span></span>                | <span data-ttu-id="ee1fd-264">System.web. ValidateCountAttribute</span><span class="sxs-lookup"><span data-stu-id="ee1fd-264">System.Management.Automation.ValidateCountAttribute</span></span>                 |
|<span data-ttu-id="ee1fd-265">ValidateDrive</span><span class="sxs-lookup"><span data-stu-id="ee1fd-265">ValidateDrive</span></span>                | <span data-ttu-id="ee1fd-266">System.web. ValidateDriveAttribute</span><span class="sxs-lookup"><span data-stu-id="ee1fd-266">System.Management.Automation.ValidateDriveAttribute</span></span>                 |
|<span data-ttu-id="ee1fd-267">ValidateLength</span><span class="sxs-lookup"><span data-stu-id="ee1fd-267">ValidateLength</span></span>               | <span data-ttu-id="ee1fd-268">System.web. ValidateLengthAttribute</span><span class="sxs-lookup"><span data-stu-id="ee1fd-268">System.Management.Automation.ValidateLengthAttribute</span></span>                |
|<span data-ttu-id="ee1fd-269">ValidateNotNull</span><span class="sxs-lookup"><span data-stu-id="ee1fd-269">ValidateNotNull</span></span>              | <span data-ttu-id="ee1fd-270">System.web. ValidateNotNullAttribute</span><span class="sxs-lookup"><span data-stu-id="ee1fd-270">System.Management.Automation.ValidateNotNullAttribute</span></span>               |
|<span data-ttu-id="ee1fd-271">ValidateNotNullOrEmpty</span><span class="sxs-lookup"><span data-stu-id="ee1fd-271">ValidateNotNullOrEmpty</span></span>       | <span data-ttu-id="ee1fd-272">System.web. ValidateNotNullOrEmptyAttribute</span><span class="sxs-lookup"><span data-stu-id="ee1fd-272">System.Management.Automation.ValidateNotNullOrEmptyAttribute</span></span>        |
|<span data-ttu-id="ee1fd-273">ValidatePattern</span><span class="sxs-lookup"><span data-stu-id="ee1fd-273">ValidatePattern</span></span>              | <span data-ttu-id="ee1fd-274">System.web. ValidatePatternAttribute</span><span class="sxs-lookup"><span data-stu-id="ee1fd-274">System.Management.Automation.ValidatePatternAttribute</span></span>               |
|<span data-ttu-id="ee1fd-275">ValidateRange</span><span class="sxs-lookup"><span data-stu-id="ee1fd-275">ValidateRange</span></span>                | <span data-ttu-id="ee1fd-276">System.web. ValidateRangeAttribute</span><span class="sxs-lookup"><span data-stu-id="ee1fd-276">System.Management.Automation.ValidateRangeAttribute</span></span>                 |
|<span data-ttu-id="ee1fd-277">ValidateScript</span><span class="sxs-lookup"><span data-stu-id="ee1fd-277">ValidateScript</span></span>               | <span data-ttu-id="ee1fd-278">System.web. ValidateScriptAttribute</span><span class="sxs-lookup"><span data-stu-id="ee1fd-278">System.Management.Automation.ValidateScriptAttribute</span></span>                |
|<span data-ttu-id="ee1fd-279">ValidateSet</span><span class="sxs-lookup"><span data-stu-id="ee1fd-279">ValidateSet</span></span>                  | <span data-ttu-id="ee1fd-280">System.web. ValidateSetAttribute</span><span class="sxs-lookup"><span data-stu-id="ee1fd-280">System.Management.Automation.ValidateSetAttribute</span></span>                   |
|<span data-ttu-id="ee1fd-281">ValidateTrustedData</span><span class="sxs-lookup"><span data-stu-id="ee1fd-281">ValidateTrustedData</span></span>          | <span data-ttu-id="ee1fd-282">System.web. ValidateTrustedDataAttribute</span><span class="sxs-lookup"><span data-stu-id="ee1fd-282">System.Management.Automation.ValidateTrustedDataAttribute</span></span>           |
|<span data-ttu-id="ee1fd-283">ValidateUserDrive</span><span class="sxs-lookup"><span data-stu-id="ee1fd-283">ValidateUserDrive</span></span>            | <span data-ttu-id="ee1fd-284">System.web. ValidateUserDriveAttribute</span><span class="sxs-lookup"><span data-stu-id="ee1fd-284">System.Management.Automation.ValidateUserDriveAttribute</span></span>             |
|<span data-ttu-id="ee1fd-285">版本</span><span class="sxs-lookup"><span data-stu-id="ee1fd-285">version</span></span>                      | <span data-ttu-id="ee1fd-286">System.Version</span><span class="sxs-lookup"><span data-stu-id="ee1fd-286">System.Version</span></span>                                                      |
|<span data-ttu-id="ee1fd-287">void</span><span class="sxs-lookup"><span data-stu-id="ee1fd-287">void</span></span>                         | <span data-ttu-id="ee1fd-288">System.Void</span><span class="sxs-lookup"><span data-stu-id="ee1fd-288">System.Void</span></span>                                                         |
|<span data-ttu-id="ee1fd-289">WildcardPattern</span><span class="sxs-lookup"><span data-stu-id="ee1fd-289">WildcardPattern</span></span>              | <span data-ttu-id="ee1fd-290">System.web. WildcardPattern</span><span class="sxs-lookup"><span data-stu-id="ee1fd-290">System.Management.Automation.WildcardPattern</span></span>                        |
|<span data-ttu-id="ee1fd-291">wmi</span><span class="sxs-lookup"><span data-stu-id="ee1fd-291">wmi</span></span>                          | <span data-ttu-id="ee1fd-292">System.Management.ManagementObject</span><span class="sxs-lookup"><span data-stu-id="ee1fd-292">System.Management.ManagementObject</span></span>                                  |
|<span data-ttu-id="ee1fd-293">wmiclass</span><span class="sxs-lookup"><span data-stu-id="ee1fd-293">wmiclass</span></span>                     | <span data-ttu-id="ee1fd-294">ManagementClass</span><span class="sxs-lookup"><span data-stu-id="ee1fd-294">System.Management.ManagementClass</span></span>                                   |
|<span data-ttu-id="ee1fd-295">wmisearcher</span><span class="sxs-lookup"><span data-stu-id="ee1fd-295">wmisearcher</span></span>                  | <span data-ttu-id="ee1fd-296">ManagementObjectSearcher</span><span class="sxs-lookup"><span data-stu-id="ee1fd-296">System.Management.ManagementObjectSearcher</span></span>                          |
|<span data-ttu-id="ee1fd-297">System.security.cryptography.x509certificates.x500distinguishedname</span><span class="sxs-lookup"><span data-stu-id="ee1fd-297">X500DistinguishedName</span></span>        | <span data-ttu-id="ee1fd-298">System.Security.Cryptography.X509Certificates.X500DistinguishedName</span><span class="sxs-lookup"><span data-stu-id="ee1fd-298">System.Security.Cryptography.X509Certificates.X500DistinguishedName</span></span> |
|<span data-ttu-id="ee1fd-299">X509Certificate</span><span class="sxs-lookup"><span data-stu-id="ee1fd-299">X509Certificate</span></span>              | <span data-ttu-id="ee1fd-300">System.Security.Cryptography.X509Certificates.X509Certificate</span><span class="sxs-lookup"><span data-stu-id="ee1fd-300">System.Security.Cryptography.X509Certificates.X509Certificate</span></span>       |
|<span data-ttu-id="ee1fd-301">xml</span><span class="sxs-lookup"><span data-stu-id="ee1fd-301">xml</span></span>                          | <span data-ttu-id="ee1fd-302">System.Xml.XmlDocument</span><span class="sxs-lookup"><span data-stu-id="ee1fd-302">System.Xml.XmlDocument</span></span>                                              |
