reference/7.0/Microsoft.PowerShell.Core/About/about_Type_Accelerators.md
---
description: 介绍适用于 .NET framework 类的类型加速器
keywords: powershell,cmdlet
Locale: en-US
ms.date: 05/01/2020
online version: https://docs.microsoft.com/powershell/module/microsoft.powershell.core/about/about_type_accelerators?view=powershell-7&WT.mc_id=ps-gethelp
schema: 2.0.0
title: about_Type_Accelerators
ms.openlocfilehash: 6f73aa590b64cda5739a2a118b2b4c5a6c103a67
ms.sourcegitcommit: f874dc1d4236e06a3df195d179f59e0a7d9f8436
ms.translationtype: MT
ms.contentlocale: zh-CN
ms.lasthandoff: 10/13/2020
ms.locfileid: "93199671"
---
# <a name="about-type-accelerators"></a><span data-ttu-id="37ccc-104">关于类型加速器</span><span class="sxs-lookup"><span data-stu-id="37ccc-104">About Type Accelerators</span></span>

## <a name="short-desription"></a><span data-ttu-id="37ccc-105">简短描述</span><span class="sxs-lookup"><span data-stu-id="37ccc-105">SHORT DESRIPTION</span></span>
<span data-ttu-id="37ccc-106">介绍适用于 .NET framework 类的类型加速器</span><span class="sxs-lookup"><span data-stu-id="37ccc-106">Describes the Type accelerators available for .NET framework classes</span></span>

## <a name="long-description"></a><span data-ttu-id="37ccc-107">详细说明</span><span class="sxs-lookup"><span data-stu-id="37ccc-107">LONG DESCRIPTION</span></span>

<span data-ttu-id="37ccc-108">类型加速器是 .NET framework 类的别名。</span><span class="sxs-lookup"><span data-stu-id="37ccc-108">Type accelerators are aliases for .NET framework classes.</span></span> <span data-ttu-id="37ccc-109">它们允许您访问特定的 .NET framework 类，而无需显式键入整个类名。</span><span class="sxs-lookup"><span data-stu-id="37ccc-109">They allow you to access specific .NET framework classes without having to explicitly type the entire class name.</span></span> <span data-ttu-id="37ccc-110">例如，可以将 **AliasAttribute** 类从中缩短 `[System.Management.Automation.AliasAttribute]` 到 `[Alias]` 。</span><span class="sxs-lookup"><span data-stu-id="37ccc-110">For example, you can shorten the **AliasAttribute** class from `[System.Management.Automation.AliasAttribute]` to `[Alias]`.</span></span>

> [!NOTE]
> <span data-ttu-id="37ccc-111">所有类型加速器仍需用方括号括起来 (`[]`) 。</span><span class="sxs-lookup"><span data-stu-id="37ccc-111">All type accelerators still need to be wrapped in square brackets(`[]`).</span></span>

## <a name="available-type-accelerators"></a><span data-ttu-id="37ccc-112">可用类型加速器</span><span class="sxs-lookup"><span data-stu-id="37ccc-112">Available Type Accelerators</span></span>

|        <span data-ttu-id="37ccc-113">加速器</span><span class="sxs-lookup"><span data-stu-id="37ccc-113">Accelerator</span></span>          |                           <span data-ttu-id="37ccc-114">完整类名</span><span class="sxs-lookup"><span data-stu-id="37ccc-114">Full Class Name</span></span>                           |
|---------------------------- | ------------------------------------------------------------------- |
|<span data-ttu-id="37ccc-115">adsi</span><span class="sxs-lookup"><span data-stu-id="37ccc-115">adsi</span></span>                         | <span data-ttu-id="37ccc-116">Microsoft.directoryservices</span><span class="sxs-lookup"><span data-stu-id="37ccc-116">System.DirectoryServices.DirectoryEntry</span></span>                             |
|<span data-ttu-id="37ccc-117">adsisearcher</span><span class="sxs-lookup"><span data-stu-id="37ccc-117">adsisearcher</span></span>                 | <span data-ttu-id="37ccc-118">Microsoft.directoryservices. DirectorySearcher</span><span class="sxs-lookup"><span data-stu-id="37ccc-118">System.DirectoryServices.DirectorySearcher</span></span>                          |
|<span data-ttu-id="37ccc-119">Alias</span><span class="sxs-lookup"><span data-stu-id="37ccc-119">Alias</span></span>                        | <span data-ttu-id="37ccc-120">System.web. AliasAttribute</span><span class="sxs-lookup"><span data-stu-id="37ccc-120">System.Management.Automation.AliasAttribute</span></span>                         |
|<span data-ttu-id="37ccc-121">AllowEmptyCollection</span><span class="sxs-lookup"><span data-stu-id="37ccc-121">AllowEmptyCollection</span></span>         | <span data-ttu-id="37ccc-122">System.web. AllowEmptyCollectionAttribute</span><span class="sxs-lookup"><span data-stu-id="37ccc-122">System.Management.Automation.AllowEmptyCollectionAttribute</span></span>          |
|<span data-ttu-id="37ccc-123">AllowEmptyString</span><span class="sxs-lookup"><span data-stu-id="37ccc-123">AllowEmptyString</span></span>             | <span data-ttu-id="37ccc-124">System.web. AllowEmptyStringAttribute</span><span class="sxs-lookup"><span data-stu-id="37ccc-124">System.Management.Automation.AllowEmptyStringAttribute</span></span>              |
|<span data-ttu-id="37ccc-125">AllowNull</span><span class="sxs-lookup"><span data-stu-id="37ccc-125">AllowNull</span></span>                    | <span data-ttu-id="37ccc-126">System.web. AllowNullAttribute</span><span class="sxs-lookup"><span data-stu-id="37ccc-126">System.Management.Automation.AllowNullAttribute</span></span>                     |
|<span data-ttu-id="37ccc-127">ArgumentCompleter</span><span class="sxs-lookup"><span data-stu-id="37ccc-127">ArgumentCompleter</span></span>            | <span data-ttu-id="37ccc-128">System.web. ArgumentCompleterAttribute</span><span class="sxs-lookup"><span data-stu-id="37ccc-128">System.Management.Automation.ArgumentCompleterAttribute</span></span>             |
|<span data-ttu-id="37ccc-129">ArgumentCompletions</span><span class="sxs-lookup"><span data-stu-id="37ccc-129">ArgumentCompletions</span></span>          | <span data-ttu-id="37ccc-130">System.web. ArgumentCompletionsAttribute</span><span class="sxs-lookup"><span data-stu-id="37ccc-130">System.Management.Automation.ArgumentCompletionsAttribute</span></span>           |
|<span data-ttu-id="37ccc-131">array</span><span class="sxs-lookup"><span data-stu-id="37ccc-131">array</span></span>                        | <span data-ttu-id="37ccc-132">System.Array</span><span class="sxs-lookup"><span data-stu-id="37ccc-132">System.Array</span></span>                                                        |
|<span data-ttu-id="37ccc-133">bigint</span><span class="sxs-lookup"><span data-stu-id="37ccc-133">bigint</span></span>                       | <span data-ttu-id="37ccc-134">BigInteger</span><span class="sxs-lookup"><span data-stu-id="37ccc-134">System.Numerics.BigInteger</span></span>                                          |
|<span data-ttu-id="37ccc-135">bool</span><span class="sxs-lookup"><span data-stu-id="37ccc-135">bool</span></span>                         | <span data-ttu-id="37ccc-136">System.Boolean</span><span class="sxs-lookup"><span data-stu-id="37ccc-136">System.Boolean</span></span>                                                      |
|<span data-ttu-id="37ccc-137">字节</span><span class="sxs-lookup"><span data-stu-id="37ccc-137">byte</span></span>                         | <span data-ttu-id="37ccc-138">System.Byte</span><span class="sxs-lookup"><span data-stu-id="37ccc-138">System.Byte</span></span>                                                         |
|<span data-ttu-id="37ccc-139">char</span><span class="sxs-lookup"><span data-stu-id="37ccc-139">char</span></span>                         | <span data-ttu-id="37ccc-140">System.Char</span><span class="sxs-lookup"><span data-stu-id="37ccc-140">System.Char</span></span>                                                         |
|<span data-ttu-id="37ccc-141">cimclass</span><span class="sxs-lookup"><span data-stu-id="37ccc-141">cimclass</span></span>                     | <span data-ttu-id="37ccc-142">CimClass。</span><span class="sxs-lookup"><span data-stu-id="37ccc-142">Microsoft.Management.Infrastructure.CimClass</span></span>                        |
|<span data-ttu-id="37ccc-143">cimconverter</span><span class="sxs-lookup"><span data-stu-id="37ccc-143">cimconverter</span></span>                 | <span data-ttu-id="37ccc-144">CimConverter。</span><span class="sxs-lookup"><span data-stu-id="37ccc-144">Microsoft.Management.Infrastructure.CimConverter</span></span>                    |
|<span data-ttu-id="37ccc-145">ciminstance</span><span class="sxs-lookup"><span data-stu-id="37ccc-145">ciminstance</span></span>                  | <span data-ttu-id="37ccc-146">Microsoft.Management.Infrastructure.CimInstance</span><span class="sxs-lookup"><span data-stu-id="37ccc-146">Microsoft.Management.Infrastructure.CimInstance</span></span>                     |
|<span data-ttu-id="37ccc-147">CimSession</span><span class="sxs-lookup"><span data-stu-id="37ccc-147">CimSession</span></span>                   | <span data-ttu-id="37ccc-148">Microsoft.Management.Infrastructure.CimSession</span><span class="sxs-lookup"><span data-stu-id="37ccc-148">Microsoft.Management.Infrastructure.CimSession</span></span>                      |
|<span data-ttu-id="37ccc-149">cimtype</span><span class="sxs-lookup"><span data-stu-id="37ccc-149">cimtype</span></span>                      | <span data-ttu-id="37ccc-150">CimType。</span><span class="sxs-lookup"><span data-stu-id="37ccc-150">Microsoft.Management.Infrastructure.CimType</span></span>                         |
|<span data-ttu-id="37ccc-151">CmdletBinding</span><span class="sxs-lookup"><span data-stu-id="37ccc-151">CmdletBinding</span></span>                | <span data-ttu-id="37ccc-152">System.web. CmdletBindingAttribute</span><span class="sxs-lookup"><span data-stu-id="37ccc-152">System.Management.Automation.CmdletBindingAttribute</span></span>                 |
|<span data-ttu-id="37ccc-153">cultureinfo</span><span class="sxs-lookup"><span data-stu-id="37ccc-153">cultureinfo</span></span>                  | <span data-ttu-id="37ccc-154">System.Globalization.CultureInfo</span><span class="sxs-lookup"><span data-stu-id="37ccc-154">System.Globalization.CultureInfo</span></span>                                    |
|<span data-ttu-id="37ccc-155">datetime</span><span class="sxs-lookup"><span data-stu-id="37ccc-155">datetime</span></span>                     | <span data-ttu-id="37ccc-156">System.DateTime</span><span class="sxs-lookup"><span data-stu-id="37ccc-156">System.DateTime</span></span>                                                     |
|<span data-ttu-id="37ccc-157">Decimal</span><span class="sxs-lookup"><span data-stu-id="37ccc-157">decimal</span></span>                      | <span data-ttu-id="37ccc-158">System.Decimal</span><span class="sxs-lookup"><span data-stu-id="37ccc-158">System.Decimal</span></span>                                                      |
|<span data-ttu-id="37ccc-159">Double</span><span class="sxs-lookup"><span data-stu-id="37ccc-159">double</span></span>                       | <span data-ttu-id="37ccc-160">System.Double</span><span class="sxs-lookup"><span data-stu-id="37ccc-160">System.Double</span></span>                                                       |
|<span data-ttu-id="37ccc-161">Set-dsclocalconfigurationmanager</span><span class="sxs-lookup"><span data-stu-id="37ccc-161">DscLocalConfigurationManager</span></span> | <span data-ttu-id="37ccc-162">System.web. DscLocalConfigurationManagerAttribute</span><span class="sxs-lookup"><span data-stu-id="37ccc-162">System.Management.Automation.DscLocalConfigurationManagerAttribute</span></span>  |
|<span data-ttu-id="37ccc-163">DscProperty</span><span class="sxs-lookup"><span data-stu-id="37ccc-163">DscProperty</span></span>                  | <span data-ttu-id="37ccc-164">System.web. DscPropertyAttribute</span><span class="sxs-lookup"><span data-stu-id="37ccc-164">System.Management.Automation.DscPropertyAttribute</span></span>                   |
|<span data-ttu-id="37ccc-165">DscResource</span><span class="sxs-lookup"><span data-stu-id="37ccc-165">DscResource</span></span>                  | <span data-ttu-id="37ccc-166">System.web. DscResourceAttribute</span><span class="sxs-lookup"><span data-stu-id="37ccc-166">System.Management.Automation.DscResourceAttribute</span></span>                   |
|<span data-ttu-id="37ccc-167">ExperimentAction</span><span class="sxs-lookup"><span data-stu-id="37ccc-167">ExperimentAction</span></span>             | <span data-ttu-id="37ccc-168">System.web. ExperimentAction</span><span class="sxs-lookup"><span data-stu-id="37ccc-168">System.Management.Automation.ExperimentAction</span></span>                       |
|<span data-ttu-id="37ccc-169">实验</span><span class="sxs-lookup"><span data-stu-id="37ccc-169">Experimental</span></span>                 | <span data-ttu-id="37ccc-170">System.web. ExperimentalAttribute</span><span class="sxs-lookup"><span data-stu-id="37ccc-170">System.Management.Automation.ExperimentalAttribute</span></span>                  |
|<span data-ttu-id="37ccc-171">ExperimentalFeature</span><span class="sxs-lookup"><span data-stu-id="37ccc-171">ExperimentalFeature</span></span>          | <span data-ttu-id="37ccc-172">System.web. ExperimentalFeature</span><span class="sxs-lookup"><span data-stu-id="37ccc-172">System.Management.Automation.ExperimentalFeature</span></span>                    |
|<span data-ttu-id="37ccc-173">float</span><span class="sxs-lookup"><span data-stu-id="37ccc-173">float</span></span>                        | <span data-ttu-id="37ccc-174">System.Single</span><span class="sxs-lookup"><span data-stu-id="37ccc-174">System.Single</span></span>                                                       |
|<span data-ttu-id="37ccc-175">GUID</span><span class="sxs-lookup"><span data-stu-id="37ccc-175">guid</span></span>                         | <span data-ttu-id="37ccc-176">System.Guid</span><span class="sxs-lookup"><span data-stu-id="37ccc-176">System.Guid</span></span>                                                         |
|<span data-ttu-id="37ccc-177">散</span><span class="sxs-lookup"><span data-stu-id="37ccc-177">hashtable</span></span>                    | <span data-ttu-id="37ccc-178">System.Collections.Hashtable</span><span class="sxs-lookup"><span data-stu-id="37ccc-178">System.Collections.Hashtable</span></span>                                        |
|<span data-ttu-id="37ccc-179">initialsessionstate</span><span class="sxs-lookup"><span data-stu-id="37ccc-179">initialsessionstate</span></span>          | <span data-ttu-id="37ccc-180">System.Management.Automation.Runspaces.InitialSessionState</span><span class="sxs-lookup"><span data-stu-id="37ccc-180">System.Management.Automation.Runspaces.InitialSessionState</span></span>          |
|<span data-ttu-id="37ccc-181">int</span><span class="sxs-lookup"><span data-stu-id="37ccc-181">int</span></span>                          | <span data-ttu-id="37ccc-182">System.Int32</span><span class="sxs-lookup"><span data-stu-id="37ccc-182">System.Int32</span></span>                                                        |
|<span data-ttu-id="37ccc-183">int16</span><span class="sxs-lookup"><span data-stu-id="37ccc-183">int16</span></span>                        | <span data-ttu-id="37ccc-184">System.Int16</span><span class="sxs-lookup"><span data-stu-id="37ccc-184">System.Int16</span></span>                                                        |
|<span data-ttu-id="37ccc-185">int32</span><span class="sxs-lookup"><span data-stu-id="37ccc-185">int32</span></span>                        | <span data-ttu-id="37ccc-186">System.Int32</span><span class="sxs-lookup"><span data-stu-id="37ccc-186">System.Int32</span></span>                                                        |
|<span data-ttu-id="37ccc-187">int64</span><span class="sxs-lookup"><span data-stu-id="37ccc-187">int64</span></span>                        | <span data-ttu-id="37ccc-188">System.Int64</span><span class="sxs-lookup"><span data-stu-id="37ccc-188">System.Int64</span></span>                                                        |
|<span data-ttu-id="37ccc-189">地址</span><span class="sxs-lookup"><span data-stu-id="37ccc-189">ipaddress</span></span>                    | <span data-ttu-id="37ccc-190">系统 .Net. IPAddress</span><span class="sxs-lookup"><span data-stu-id="37ccc-190">System.Net.IPAddress</span></span>                                                |
|<span data-ttu-id="37ccc-191">IPEndpoint</span><span class="sxs-lookup"><span data-stu-id="37ccc-191">IPEndpoint</span></span>                   | <span data-ttu-id="37ccc-192">系统 .Net. IPEndPoint</span><span class="sxs-lookup"><span data-stu-id="37ccc-192">System.Net.IPEndPoint</span></span>                                               |
|<span data-ttu-id="37ccc-193">long</span><span class="sxs-lookup"><span data-stu-id="37ccc-193">long</span></span>                         | <span data-ttu-id="37ccc-194">System.Int64</span><span class="sxs-lookup"><span data-stu-id="37ccc-194">System.Int64</span></span>                                                        |
|<span data-ttu-id="37ccc-195">mailaddress</span><span class="sxs-lookup"><span data-stu-id="37ccc-195">mailaddress</span></span>                  | <span data-ttu-id="37ccc-196">系统 MailAddress</span><span class="sxs-lookup"><span data-stu-id="37ccc-196">System.Net.Mail.MailAddress</span></span>                                         |
|<span data-ttu-id="37ccc-197">NullString</span><span class="sxs-lookup"><span data-stu-id="37ccc-197">NullString</span></span>                   | <span data-ttu-id="37ccc-198">"NullString"。</span><span class="sxs-lookup"><span data-stu-id="37ccc-198">System.Management.Automation.Language.NullString</span></span>                    |
|<span data-ttu-id="37ccc-199">ObjectSecurity</span><span class="sxs-lookup"><span data-stu-id="37ccc-199">ObjectSecurity</span></span>               | <span data-ttu-id="37ccc-200">Accesscontrol-namespace. ObjectSecurity</span><span class="sxs-lookup"><span data-stu-id="37ccc-200">System.Security.AccessControl.ObjectSecurity</span></span>                        |
|<span data-ttu-id="37ccc-201">OutputType</span><span class="sxs-lookup"><span data-stu-id="37ccc-201">OutputType</span></span>                   | <span data-ttu-id="37ccc-202">System.web. OutputTypeAttribute</span><span class="sxs-lookup"><span data-stu-id="37ccc-202">System.Management.Automation.OutputTypeAttribute</span></span>                    |
|<span data-ttu-id="37ccc-203">参数</span><span class="sxs-lookup"><span data-stu-id="37ccc-203">Parameter</span></span>                    | <span data-ttu-id="37ccc-204">System.web. ParameterAttribute</span><span class="sxs-lookup"><span data-stu-id="37ccc-204">System.Management.Automation.ParameterAttribute</span></span>                     |
|<span data-ttu-id="37ccc-205">PhysicalAddress</span><span class="sxs-lookup"><span data-stu-id="37ccc-205">PhysicalAddress</span></span>              | <span data-ttu-id="37ccc-206">System.net.networkinformation. PhysicalAddress</span><span class="sxs-lookup"><span data-stu-id="37ccc-206">System.Net.NetworkInformation.PhysicalAddress</span></span>                       |
|<span data-ttu-id="37ccc-207">powershell</span><span class="sxs-lookup"><span data-stu-id="37ccc-207">powershell</span></span>                   | <span data-ttu-id="37ccc-208">System.web。</span><span class="sxs-lookup"><span data-stu-id="37ccc-208">System.Management.Automation.PowerShell</span></span>                             |
|<span data-ttu-id="37ccc-209">psaliasproperty</span><span class="sxs-lookup"><span data-stu-id="37ccc-209">psaliasproperty</span></span>              | <span data-ttu-id="37ccc-210">System.web. PSAliasProperty</span><span class="sxs-lookup"><span data-stu-id="37ccc-210">System.Management.Automation.PSAliasProperty</span></span>                        |
|<span data-ttu-id="37ccc-211">pscredential</span><span class="sxs-lookup"><span data-stu-id="37ccc-211">pscredential</span></span>                 | <span data-ttu-id="37ccc-212">System.Management.Automation.PSCredential</span><span class="sxs-lookup"><span data-stu-id="37ccc-212">System.Management.Automation.PSCredential</span></span>                           |
|<span data-ttu-id="37ccc-213">pscustomobject</span><span class="sxs-lookup"><span data-stu-id="37ccc-213">pscustomobject</span></span>               | <span data-ttu-id="37ccc-214">System.Management.Automation.PSObject</span><span class="sxs-lookup"><span data-stu-id="37ccc-214">System.Management.Automation.PSObject</span></span>                               |
|<span data-ttu-id="37ccc-215">PSDefaultValue</span><span class="sxs-lookup"><span data-stu-id="37ccc-215">PSDefaultValue</span></span>               | <span data-ttu-id="37ccc-216">System.Management.Automation.PSDefaultValueAttribute</span><span class="sxs-lookup"><span data-stu-id="37ccc-216">System.Management.Automation.PSDefaultValueAttribute</span></span>                |
|<span data-ttu-id="37ccc-217">pslistmodifier</span><span class="sxs-lookup"><span data-stu-id="37ccc-217">pslistmodifier</span></span>               | <span data-ttu-id="37ccc-218">System.web. PSListModifier</span><span class="sxs-lookup"><span data-stu-id="37ccc-218">System.Management.Automation.PSListModifier</span></span>                         |
|<span data-ttu-id="37ccc-219">psmoduleinfo</span><span class="sxs-lookup"><span data-stu-id="37ccc-219">psmoduleinfo</span></span>                 | <span data-ttu-id="37ccc-220">System.Management.Automation.PSModuleInfo</span><span class="sxs-lookup"><span data-stu-id="37ccc-220">System.Management.Automation.PSModuleInfo</span></span>                           |
|<span data-ttu-id="37ccc-221">psnoteproperty</span><span class="sxs-lookup"><span data-stu-id="37ccc-221">psnoteproperty</span></span>               | <span data-ttu-id="37ccc-222">System.web. PSNoteProperty</span><span class="sxs-lookup"><span data-stu-id="37ccc-222">System.Management.Automation.PSNoteProperty</span></span>                         |
|<span data-ttu-id="37ccc-223">psobject</span><span class="sxs-lookup"><span data-stu-id="37ccc-223">psobject</span></span>                     | <span data-ttu-id="37ccc-224">System.Management.Automation.PSObject</span><span class="sxs-lookup"><span data-stu-id="37ccc-224">System.Management.Automation.PSObject</span></span>                               |
|<span data-ttu-id="37ccc-225">psprimitivedictionary</span><span class="sxs-lookup"><span data-stu-id="37ccc-225">psprimitivedictionary</span></span>        | <span data-ttu-id="37ccc-226">System.web. PSPrimitiveDictionary</span><span class="sxs-lookup"><span data-stu-id="37ccc-226">System.Management.Automation.PSPrimitiveDictionary</span></span>                  |
|<span data-ttu-id="37ccc-227">pspropertyexpression</span><span class="sxs-lookup"><span data-stu-id="37ccc-227">pspropertyexpression</span></span>         | <span data-ttu-id="37ccc-228">PSPropertyExpression。</span><span class="sxs-lookup"><span data-stu-id="37ccc-228">Microsoft.PowerShell.Commands.PSPropertyExpression</span></span>                  |
|<span data-ttu-id="37ccc-229">psscriptmethod</span><span class="sxs-lookup"><span data-stu-id="37ccc-229">psscriptmethod</span></span>               | <span data-ttu-id="37ccc-230">System.web. PSScriptMethod</span><span class="sxs-lookup"><span data-stu-id="37ccc-230">System.Management.Automation.PSScriptMethod</span></span>                         |
|<span data-ttu-id="37ccc-231">psscriptproperty</span><span class="sxs-lookup"><span data-stu-id="37ccc-231">psscriptproperty</span></span>             | <span data-ttu-id="37ccc-232">System.web. PSScriptProperty</span><span class="sxs-lookup"><span data-stu-id="37ccc-232">System.Management.Automation.PSScriptProperty</span></span>                       |
|<span data-ttu-id="37ccc-233">PSTypeNameAttribute</span><span class="sxs-lookup"><span data-stu-id="37ccc-233">PSTypeNameAttribute</span></span>          | <span data-ttu-id="37ccc-234">System.web. PSTypeNameAttribute</span><span class="sxs-lookup"><span data-stu-id="37ccc-234">System.Management.Automation.PSTypeNameAttribute</span></span>                    |
|<span data-ttu-id="37ccc-235">system.management.automation.psvariable</span><span class="sxs-lookup"><span data-stu-id="37ccc-235">psvariable</span></span>                   | <span data-ttu-id="37ccc-236">System.Management.Automation.PSVariable</span><span class="sxs-lookup"><span data-stu-id="37ccc-236">System.Management.Automation.PSVariable</span></span>                             |
|<span data-ttu-id="37ccc-237">psvariableproperty</span><span class="sxs-lookup"><span data-stu-id="37ccc-237">psvariableproperty</span></span>           | <span data-ttu-id="37ccc-238">System.web. PSVariableProperty</span><span class="sxs-lookup"><span data-stu-id="37ccc-238">System.Management.Automation.PSVariableProperty</span></span>                     |
|<span data-ttu-id="37ccc-239">ref</span><span class="sxs-lookup"><span data-stu-id="37ccc-239">ref</span></span>                          | <span data-ttu-id="37ccc-240">System.web. PSReference</span><span class="sxs-lookup"><span data-stu-id="37ccc-240">System.Management.Automation.PSReference</span></span>                            |
|<span data-ttu-id="37ccc-241">regex</span><span class="sxs-lookup"><span data-stu-id="37ccc-241">regex</span></span>                        | <span data-ttu-id="37ccc-242">System.Text.RegularExpressions.Regex</span><span class="sxs-lookup"><span data-stu-id="37ccc-242">System.Text.RegularExpressions.Regex</span></span>                                |
|<span data-ttu-id="37ccc-243">运行空间</span><span class="sxs-lookup"><span data-stu-id="37ccc-243">runspace</span></span>                     | <span data-ttu-id="37ccc-244">System.web. Management。</span><span class="sxs-lookup"><span data-stu-id="37ccc-244">System.Management.Automation.Runspaces.Runspace</span></span>                     |
|<span data-ttu-id="37ccc-245">runspacefactory</span><span class="sxs-lookup"><span data-stu-id="37ccc-245">runspacefactory</span></span>              | <span data-ttu-id="37ccc-246">"RunspaceFactory"。</span><span class="sxs-lookup"><span data-stu-id="37ccc-246">System.Management.Automation.Runspaces.RunspaceFactory</span></span>              |
|<span data-ttu-id="37ccc-247">sbyte</span><span class="sxs-lookup"><span data-stu-id="37ccc-247">sbyte</span></span>                        | <span data-ttu-id="37ccc-248">System.SByte</span><span class="sxs-lookup"><span data-stu-id="37ccc-248">System.SByte</span></span>                                                        |
|<span data-ttu-id="37ccc-249">scriptblock</span><span class="sxs-lookup"><span data-stu-id="37ccc-249">scriptblock</span></span>                  | <span data-ttu-id="37ccc-250">System.object。</span><span class="sxs-lookup"><span data-stu-id="37ccc-250">System.Management.Automation.ScriptBlock</span></span>                            |
|<span data-ttu-id="37ccc-251">securestring</span><span class="sxs-lookup"><span data-stu-id="37ccc-251">securestring</span></span>                 | <span data-ttu-id="37ccc-252">System.Security.SecureString</span><span class="sxs-lookup"><span data-stu-id="37ccc-252">System.Security.SecureString</span></span>                                        |
|<span data-ttu-id="37ccc-253">semver</span><span class="sxs-lookup"><span data-stu-id="37ccc-253">semver</span></span>                       | <span data-ttu-id="37ccc-254">System.web. SemanticVersion</span><span class="sxs-lookup"><span data-stu-id="37ccc-254">System.Management.Automation.SemanticVersion</span></span>                        |
|<span data-ttu-id="37ccc-255">short</span><span class="sxs-lookup"><span data-stu-id="37ccc-255">short</span></span>                        | <span data-ttu-id="37ccc-256">System.Int16</span><span class="sxs-lookup"><span data-stu-id="37ccc-256">System.Int16</span></span>                                                        |
|<span data-ttu-id="37ccc-257"> single</span><span class="sxs-lookup"><span data-stu-id="37ccc-257">single</span></span>                       | <span data-ttu-id="37ccc-258">System.Single</span><span class="sxs-lookup"><span data-stu-id="37ccc-258">System.Single</span></span>                                                       |
|<span data-ttu-id="37ccc-259">string</span><span class="sxs-lookup"><span data-stu-id="37ccc-259">string</span></span>                       | <span data-ttu-id="37ccc-260">System.String</span><span class="sxs-lookup"><span data-stu-id="37ccc-260">System.String</span></span>                                                       |
|<span data-ttu-id="37ccc-261">SupportsWildcards</span><span class="sxs-lookup"><span data-stu-id="37ccc-261">SupportsWildcards</span></span>            | <span data-ttu-id="37ccc-262">System.web. SupportsWildcardsAttribute</span><span class="sxs-lookup"><span data-stu-id="37ccc-262">System.Management.Automation.SupportsWildcardsAttribute</span></span>             |
|<span data-ttu-id="37ccc-263">开关</span><span class="sxs-lookup"><span data-stu-id="37ccc-263">switch</span></span>                       | <span data-ttu-id="37ccc-264">System.Management.Automation.SwitchParameter</span><span class="sxs-lookup"><span data-stu-id="37ccc-264">System.Management.Automation.SwitchParameter</span></span>                        |
|<span data-ttu-id="37ccc-265">timespan</span><span class="sxs-lookup"><span data-stu-id="37ccc-265">timespan</span></span>                     | <span data-ttu-id="37ccc-266">System.TimeSpan</span><span class="sxs-lookup"><span data-stu-id="37ccc-266">System.TimeSpan</span></span>                                                     |
|<span data-ttu-id="37ccc-267">类型</span><span class="sxs-lookup"><span data-stu-id="37ccc-267">type</span></span>                         | <span data-ttu-id="37ccc-268">System.Type</span><span class="sxs-lookup"><span data-stu-id="37ccc-268">System.Type</span></span>                                                         |
|<span data-ttu-id="37ccc-269">uint</span><span class="sxs-lookup"><span data-stu-id="37ccc-269">uint</span></span>                         | <span data-ttu-id="37ccc-270">System.UInt32</span><span class="sxs-lookup"><span data-stu-id="37ccc-270">System.UInt32</span></span>                                                       |
|<span data-ttu-id="37ccc-271">uint16</span><span class="sxs-lookup"><span data-stu-id="37ccc-271">uint16</span></span>                       | <span data-ttu-id="37ccc-272">System.UInt16</span><span class="sxs-lookup"><span data-stu-id="37ccc-272">System.UInt16</span></span>                                                       |
|<span data-ttu-id="37ccc-273">uint32</span><span class="sxs-lookup"><span data-stu-id="37ccc-273">uint32</span></span>                       | <span data-ttu-id="37ccc-274">System.UInt32</span><span class="sxs-lookup"><span data-stu-id="37ccc-274">System.UInt32</span></span>                                                       |
|<span data-ttu-id="37ccc-275">uint64</span><span class="sxs-lookup"><span data-stu-id="37ccc-275">uint64</span></span>                       | <span data-ttu-id="37ccc-276">System.UInt64</span><span class="sxs-lookup"><span data-stu-id="37ccc-276">System.UInt64</span></span>                                                       |
|<span data-ttu-id="37ccc-277">ulong</span><span class="sxs-lookup"><span data-stu-id="37ccc-277">ulong</span></span>                        | <span data-ttu-id="37ccc-278">System.UInt64</span><span class="sxs-lookup"><span data-stu-id="37ccc-278">System.UInt64</span></span>                                                       |
|<span data-ttu-id="37ccc-279">uri</span><span class="sxs-lookup"><span data-stu-id="37ccc-279">uri</span></span>                          | <span data-ttu-id="37ccc-280">System.Uri</span><span class="sxs-lookup"><span data-stu-id="37ccc-280">System.Uri</span></span>                                                          |
|<span data-ttu-id="37ccc-281">ushort</span><span class="sxs-lookup"><span data-stu-id="37ccc-281">ushort</span></span>                       | <span data-ttu-id="37ccc-282">System.UInt16</span><span class="sxs-lookup"><span data-stu-id="37ccc-282">System.UInt16</span></span>                                                       |
|<span data-ttu-id="37ccc-283">ValidateCount</span><span class="sxs-lookup"><span data-stu-id="37ccc-283">ValidateCount</span></span>                | <span data-ttu-id="37ccc-284">System.web. ValidateCountAttribute</span><span class="sxs-lookup"><span data-stu-id="37ccc-284">System.Management.Automation.ValidateCountAttribute</span></span>                 |
|<span data-ttu-id="37ccc-285">ValidateDrive</span><span class="sxs-lookup"><span data-stu-id="37ccc-285">ValidateDrive</span></span>                | <span data-ttu-id="37ccc-286">System.web. ValidateDriveAttribute</span><span class="sxs-lookup"><span data-stu-id="37ccc-286">System.Management.Automation.ValidateDriveAttribute</span></span>                 |
|<span data-ttu-id="37ccc-287">ValidateLength</span><span class="sxs-lookup"><span data-stu-id="37ccc-287">ValidateLength</span></span>               | <span data-ttu-id="37ccc-288">System.web. ValidateLengthAttribute</span><span class="sxs-lookup"><span data-stu-id="37ccc-288">System.Management.Automation.ValidateLengthAttribute</span></span>                |
|<span data-ttu-id="37ccc-289">ValidateNotNull</span><span class="sxs-lookup"><span data-stu-id="37ccc-289">ValidateNotNull</span></span>              | <span data-ttu-id="37ccc-290">System.web. ValidateNotNullAttribute</span><span class="sxs-lookup"><span data-stu-id="37ccc-290">System.Management.Automation.ValidateNotNullAttribute</span></span>               |
|<span data-ttu-id="37ccc-291">ValidateNotNullOrEmpty</span><span class="sxs-lookup"><span data-stu-id="37ccc-291">ValidateNotNullOrEmpty</span></span>       | <span data-ttu-id="37ccc-292">System.web. ValidateNotNullOrEmptyAttribute</span><span class="sxs-lookup"><span data-stu-id="37ccc-292">System.Management.Automation.ValidateNotNullOrEmptyAttribute</span></span>        |
|<span data-ttu-id="37ccc-293">ValidatePattern</span><span class="sxs-lookup"><span data-stu-id="37ccc-293">ValidatePattern</span></span>              | <span data-ttu-id="37ccc-294">System.web. ValidatePatternAttribute</span><span class="sxs-lookup"><span data-stu-id="37ccc-294">System.Management.Automation.ValidatePatternAttribute</span></span>               |
|<span data-ttu-id="37ccc-295">ValidateRange</span><span class="sxs-lookup"><span data-stu-id="37ccc-295">ValidateRange</span></span>                | <span data-ttu-id="37ccc-296">System.web. ValidateRangeAttribute</span><span class="sxs-lookup"><span data-stu-id="37ccc-296">System.Management.Automation.ValidateRangeAttribute</span></span>                 |
|<span data-ttu-id="37ccc-297">ValidateScript</span><span class="sxs-lookup"><span data-stu-id="37ccc-297">ValidateScript</span></span>               | <span data-ttu-id="37ccc-298">System.web. ValidateScriptAttribute</span><span class="sxs-lookup"><span data-stu-id="37ccc-298">System.Management.Automation.ValidateScriptAttribute</span></span>                |
|<span data-ttu-id="37ccc-299">ValidateSet</span><span class="sxs-lookup"><span data-stu-id="37ccc-299">ValidateSet</span></span>                  | <span data-ttu-id="37ccc-300">System.web. ValidateSetAttribute</span><span class="sxs-lookup"><span data-stu-id="37ccc-300">System.Management.Automation.ValidateSetAttribute</span></span>                   |
|<span data-ttu-id="37ccc-301">ValidateTrustedData</span><span class="sxs-lookup"><span data-stu-id="37ccc-301">ValidateTrustedData</span></span>          | <span data-ttu-id="37ccc-302">System.web. ValidateTrustedDataAttribute</span><span class="sxs-lookup"><span data-stu-id="37ccc-302">System.Management.Automation.ValidateTrustedDataAttribute</span></span>           |
|<span data-ttu-id="37ccc-303">ValidateUserDrive</span><span class="sxs-lookup"><span data-stu-id="37ccc-303">ValidateUserDrive</span></span>            | <span data-ttu-id="37ccc-304">System.web. ValidateUserDriveAttribute</span><span class="sxs-lookup"><span data-stu-id="37ccc-304">System.Management.Automation.ValidateUserDriveAttribute</span></span>             |
|<span data-ttu-id="37ccc-305">版本</span><span class="sxs-lookup"><span data-stu-id="37ccc-305">version</span></span>                      | <span data-ttu-id="37ccc-306">System.Version</span><span class="sxs-lookup"><span data-stu-id="37ccc-306">System.Version</span></span>                                                      |
|<span data-ttu-id="37ccc-307">void</span><span class="sxs-lookup"><span data-stu-id="37ccc-307">void</span></span>                         | <span data-ttu-id="37ccc-308">System.Void</span><span class="sxs-lookup"><span data-stu-id="37ccc-308">System.Void</span></span>                                                         |
|<span data-ttu-id="37ccc-309">WildcardPattern</span><span class="sxs-lookup"><span data-stu-id="37ccc-309">WildcardPattern</span></span>              | <span data-ttu-id="37ccc-310">System.web. WildcardPattern</span><span class="sxs-lookup"><span data-stu-id="37ccc-310">System.Management.Automation.WildcardPattern</span></span>                        |
|<span data-ttu-id="37ccc-311">wmi</span><span class="sxs-lookup"><span data-stu-id="37ccc-311">wmi</span></span>                          | <span data-ttu-id="37ccc-312">System.Management.ManagementObject</span><span class="sxs-lookup"><span data-stu-id="37ccc-312">System.Management.ManagementObject</span></span>                                  |
|<span data-ttu-id="37ccc-313">wmiclass</span><span class="sxs-lookup"><span data-stu-id="37ccc-313">wmiclass</span></span>                     | <span data-ttu-id="37ccc-314">ManagementClass</span><span class="sxs-lookup"><span data-stu-id="37ccc-314">System.Management.ManagementClass</span></span>                                   |
|<span data-ttu-id="37ccc-315">wmisearcher</span><span class="sxs-lookup"><span data-stu-id="37ccc-315">wmisearcher</span></span>                  | <span data-ttu-id="37ccc-316">ManagementObjectSearcher</span><span class="sxs-lookup"><span data-stu-id="37ccc-316">System.Management.ManagementObjectSearcher</span></span>                          |
|<span data-ttu-id="37ccc-317">System.security.cryptography.x509certificates.x500distinguishedname</span><span class="sxs-lookup"><span data-stu-id="37ccc-317">X500DistinguishedName</span></span>        | <span data-ttu-id="37ccc-318">System.Security.Cryptography.X509Certificates.X500DistinguishedName</span><span class="sxs-lookup"><span data-stu-id="37ccc-318">System.Security.Cryptography.X509Certificates.X500DistinguishedName</span></span> |
|<span data-ttu-id="37ccc-319">X509Certificate</span><span class="sxs-lookup"><span data-stu-id="37ccc-319">X509Certificate</span></span>              | <span data-ttu-id="37ccc-320">System.Security.Cryptography.X509Certificates.X509Certificate</span><span class="sxs-lookup"><span data-stu-id="37ccc-320">System.Security.Cryptography.X509Certificates.X509Certificate</span></span>       |
|<span data-ttu-id="37ccc-321">xml</span><span class="sxs-lookup"><span data-stu-id="37ccc-321">xml</span></span>                          | <span data-ttu-id="37ccc-322">System.Xml.XmlDocument</span><span class="sxs-lookup"><span data-stu-id="37ccc-322">System.Xml.XmlDocument</span></span>                                              |
